fix img align

--- a/kadai02/main.css
+++ b/kadai02/main.css
@@ -6,6 +6,7 @@ body {
 img.square{
     height:250px;
     width:250px;
+    vertical-align: bottom;
 }
 .dashed{
     width:250px;
